Enable teasers and adjust UX for post lists

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-<div class="row">
-  <div class="col-md-10 off-md-1">
-    <p>Here are some of my recent posts:</p>
-  </div>
-
-  $partial("templates/post-list.html")$
-
-  <div class="col-md-10 off-md-1">
-    <p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
-  </div>
+<div class="col-md-11 offset-md-1">
+  <h3>Recent Posts</h3>
+</div>
+<br>
+$partial("templates/post-list.html")$
+<br>
+<div class="col-md-11 offset-md-1">
+  <p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
 </div>
